// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render should render TaskList with no tasks text 1`] = `
<div
  className="content-container list"
>
  <Connect(TaskListHeader) />
  <div
    className="list-item__header list-item__header-message"
  >
    <p>
      No tasks yet
    </p>
  </div>
</div>
`;

exports[`render should render TaskList with tasks in groups 1`] = `
<div
  className="content-container list"
>
  <Connect(TaskListHeader) />
  <TaskListGroup
    group={
      Object {
        "groupName": "CS2030",
        "tasks": Array [
          Object {
            "completed": false,
            "deadline": 1591329600000,
            "description": "Catch up on lectures!",
            "id": "5feb18c0-78a8-49b6-8584-75b8c1b40abc",
            "module": "CS2030",
            "title": "Watch lecture",
          },
          Object {
            "completed": false,
            "description": "",
            "id": "a1050220-fa88-4dc2-aa9d-9521ae95de47",
            "module": "CS2030",
            "title": "Do lab",
          },
        ],
      }
    }
    key="CS2030"
  />
  <TaskListGroup
    group={
      Object {
        "groupName": "others",
        "tasks": Array [
          Object {
            "completed": true,
            "description": "",
            "id": "d2b10492-853d-4290-baf8-cb47cd4ec04e",
            "module": "",
            "title": "Read a book everyday",
          },
        ],
      }
    }
    key="others"
  />
  <TaskListGroup
    group={
      Object {
        "groupName": "CS2040S",
        "tasks": Array [
          Object {
            "completed": true,
            "description": "",
            "id": "73c8ac1a-1d06-46ee-a39e-e656e1e41db0",
            "module": "CS2040S",
            "title": "Do problem set",
          },
        ],
      }
    }
    key="CS2040S"
  />
</div>
`;

exports[`render should render TaskList with tasks sorted by deadline in reverse 1`] = `
<div
  className="content-container list"
>
  <Connect(TaskListHeader) />
  <Connect(TaskListItem)
    dashboard={true}
    key="a1050220-fa88-4dc2-aa9d-9521ae95de47"
    showGroup={true}
    task={
      Object {
        "completed": false,
        "description": "",
        "id": "a1050220-fa88-4dc2-aa9d-9521ae95de47",
        "module": "CS2030",
        "title": "Do lab",
      }
    }
  />
  <Connect(TaskListItem)
    dashboard={true}
    key="5feb18c0-78a8-49b6-8584-75b8c1b40abc"
    showGroup={true}
    task={
      Object {
        "completed": false,
        "deadline": 1591329600000,
        "description": "Catch up on lectures!",
        "id": "5feb18c0-78a8-49b6-8584-75b8c1b40abc",
        "module": "CS2030",
        "title": "Watch lecture",
      }
    }
  />
  <Connect(TaskListItem)
    dashboard={true}
    key="d2b10492-853d-4290-baf8-cb47cd4ec04e"
    showGroup={true}
    task={
      Object {
        "completed": true,
        "description": "",
        "id": "d2b10492-853d-4290-baf8-cb47cd4ec04e",
        "module": "",
        "title": "Read a book everyday",
      }
    }
  />
  <Connect(TaskListItem)
    dashboard={true}
    key="73c8ac1a-1d06-46ee-a39e-e656e1e41db0"
    showGroup={true}
    task={
      Object {
        "completed": true,
        "description": "",
        "id": "73c8ac1a-1d06-46ee-a39e-e656e1e41db0",
        "module": "CS2040S",
        "title": "Do problem set",
      }
    }
  />
</div>
`;

exports[`render should render TaskList with tasks sorted by name 1`] = `
<div
  className="content-container list"
>
  <Connect(TaskListHeader) />
  <Connect(TaskListItem)
    dashboard={true}
    key="a1050220-fa88-4dc2-aa9d-9521ae95de47"
    showGroup={true}
    task={
      Object {
        "completed": false,
        "description": "",
        "id": "a1050220-fa88-4dc2-aa9d-9521ae95de47",
        "module": "CS2030",
        "title": "Do lab",
      }
    }
  />
  <Connect(TaskListItem)
    dashboard={true}
    key="5feb18c0-78a8-49b6-8584-75b8c1b40abc"
    showGroup={true}
    task={
      Object {
        "completed": false,
        "deadline": 1591329600000,
        "description": "Catch up on lectures!",
        "id": "5feb18c0-78a8-49b6-8584-75b8c1b40abc",
        "module": "CS2030",
        "title": "Watch lecture",
      }
    }
  />
  <Connect(TaskListItem)
    dashboard={true}
    key="73c8ac1a-1d06-46ee-a39e-e656e1e41db0"
    showGroup={true}
    task={
      Object {
        "completed": true,
        "description": "",
        "id": "73c8ac1a-1d06-46ee-a39e-e656e1e41db0",
        "module": "CS2040S",
        "title": "Do problem set",
      }
    }
  />
  <Connect(TaskListItem)
    dashboard={true}
    key="d2b10492-853d-4290-baf8-cb47cd4ec04e"
    showGroup={true}
    task={
      Object {
        "completed": true,
        "description": "",
        "id": "d2b10492-853d-4290-baf8-cb47cd4ec04e",
        "module": "",
        "title": "Read a book everyday",
      }
    }
  />
</div>
`;

exports[`render should render TaskList with tasks sorted by name in reverse 1`] = `
<div
  className="content-container list"
>
  <Connect(TaskListHeader) />
  <Connect(TaskListItem)
    dashboard={true}
    key="5feb18c0-78a8-49b6-8584-75b8c1b40abc"
    showGroup={true}
    task={
      Object {
        "completed": false,
        "deadline": 1591329600000,
        "description": "Catch up on lectures!",
        "id": "5feb18c0-78a8-49b6-8584-75b8c1b40abc",
        "module": "CS2030",
        "title": "Watch lecture",
      }
    }
  />
  <Connect(TaskListItem)
    dashboard={true}
    key="a1050220-fa88-4dc2-aa9d-9521ae95de47"
    showGroup={true}
    task={
      Object {
        "completed": false,
        "description": "",
        "id": "a1050220-fa88-4dc2-aa9d-9521ae95de47",
        "module": "CS2030",
        "title": "Do lab",
      }
    }
  />
  <Connect(TaskListItem)
    dashboard={true}
    key="d2b10492-853d-4290-baf8-cb47cd4ec04e"
    showGroup={true}
    task={
      Object {
        "completed": true,
        "description": "",
        "id": "d2b10492-853d-4290-baf8-cb47cd4ec04e",
        "module": "",
        "title": "Read a book everyday",
      }
    }
  />
  <Connect(TaskListItem)
    dashboard={true}
    key="73c8ac1a-1d06-46ee-a39e-e656e1e41db0"
    showGroup={true}
    task={
      Object {
        "completed": true,
        "description": "",
        "id": "73c8ac1a-1d06-46ee-a39e-e656e1e41db0",
        "module": "CS2040S",
        "title": "Do problem set",
      }
    }
  />
</div>
`;

exports[`render should render TaskList with tasks ungrouped 1`] = `
<div
  className="content-container list"
>
  <Connect(TaskListHeader) />
  <Connect(TaskListItem)
    dashboard={true}
    key="5feb18c0-78a8-49b6-8584-75b8c1b40abc"
    showGroup={true}
    task={
      Object {
        "completed": false,
        "deadline": 1591329600000,
        "description": "Catch up on lectures!",
        "id": "5feb18c0-78a8-49b6-8584-75b8c1b40abc",
        "module": "CS2030",
        "title": "Watch lecture",
      }
    }
  />
  <Connect(TaskListItem)
    dashboard={true}
    key="a1050220-fa88-4dc2-aa9d-9521ae95de47"
    showGroup={true}
    task={
      Object {
        "completed": false,
        "description": "",
        "id": "a1050220-fa88-4dc2-aa9d-9521ae95de47",
        "module": "CS2030",
        "title": "Do lab",
      }
    }
  />
  <Connect(TaskListItem)
    dashboard={true}
    key="d2b10492-853d-4290-baf8-cb47cd4ec04e"
    showGroup={true}
    task={
      Object {
        "completed": true,
        "description": "",
        "id": "d2b10492-853d-4290-baf8-cb47cd4ec04e",
        "module": "",
        "title": "Read a book everyday",
      }
    }
  />
  <Connect(TaskListItem)
    dashboard={true}
    key="73c8ac1a-1d06-46ee-a39e-e656e1e41db0"
    showGroup={true}
    task={
      Object {
        "completed": true,
        "description": "",
        "id": "73c8ac1a-1d06-46ee-a39e-e656e1e41db0",
        "module": "CS2040S",
        "title": "Do problem set",
      }
    }
  />
</div>
`;
